--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@ionic/angular": "^6.1.9",
+    "@ngrx/store": "^15.1.0",
     "ionicons": "^6.0.3",
     "json-server": "^0.17.1",
     "rxjs": "~7.5.0",
@@ -54,7 +55,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "@ngrx/eslint-plugin": "^15.1.0"
   },
   "description": "An Ionic project"
 }
